Bug 361865 - In German, the dialog uses "share" if it is actually shares and/or bonds (i.e. securities).
Summary: In German, the dialog uses "share" if it is actually shares and/or bonds (i.e...
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: translation (other bugs)
Version First Reported In: 4.7.2
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks: 361850
  Show dependency treegraph
 
Reported: 2016-04-16 18:08 UTC by Al
Modified: 2021-04-16 09:02 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.8.3,5.0.8
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Al 2016-04-16 18:08:52 UTC
The drop-down list of activities in security accounts use the word 'share' but should refer to shares and/or bonds. While I am not a native Englsih speaker, it seems to me that 'securities' should be used. See also http://www.accountingcoach.com/blog/stocks-bonds


Reproducible: Always

Steps to Reproduce:
1.Open the ledger for an investment account
2.Click the button 'New' in the bottom part of the window
3.Open the drop down list next to 'Activity'

Actual Results:  
The possible activities in security accounts are:
1) Buy shares
2) Sell shares
3) Dividend
4) Reinvest dividend
5) Yield
6) Add shares
7) Remove shares
8) Split shares
9) Interest income

Expected Results:  
1) Buy securities
2) Sell securities
3) Dividend
4) Reinvest dividend
5) Yield
6) Add securities
7) Remove securities
8) Split shares
9) Interest income

I filed this as a bug as requested by comment #2 to bug https://bugs.kde.org/show_bug.cgi?id=361850
Comment 1 Jack 2016-04-16 18:27:51 UTC
As a native English speaker, I do not see a problem.  To me, a "share" 
is the unit of ownership of a security, whether it is a stock or bond or 
mutual fund.  The link provided shows a difference between stocks and 
bonds, but is not explicit enough that "shares" does not also apply to 
bonds.  I will do more research before wanting to change the English 
terms.

To discuss the terminology further, I don't consider that I buy a 
security.  I buy shares in that security.  The first time I buy shares 
in a given security, I do have to add that security to the list of those 
in which I own shares, but when I buy more shares, I don't buy that 
security again.  I'm not sure I can perfectly explain the grammar, but 
the current use seems good.

I will respond directly to the other bug to discuss changing the German 
translation.
Comment 2 Jack 2016-04-16 19:33:02 UTC
I believe the underlying problem is that English is just sometimes a 
messy language.  In discussing investments, the word "share" seems to be 
used in two slightly different ways.  (I am referring to common usage, 
not to a formal dictionary definition.)  Sometimes it is used as an 
equivalent word for stock, as in the article referred to by the link in 
the original post.  The other use is to refer to the unit of investment. 
  This is certainly used for both stocks and mutual funds.  I have not 
found any particular examples of this use for bonds, but I believe the 
term is used in the same way.  If we do not accept this, what term would 
be used for the unit of ownership of a bond?.

I will try to get a short lesson next week from my investment advisor to 
confirm this, but unless he says something I do not expect, I would 
argue to leave the English terms unchanged.  If that is done, we will 
have to find a way to inform the translators that "share" in those four 
terms is used as the unit of investment, not a particular type of security.
Comment 3 allan 2016-04-16 20:50:15 UTC
I would not waste my time looking into changing the term 'share' here.  It is embedded deeply within KMyMoney source code, and appears well over 900 times.  Bond appears 13 times.

I agree with Jack that possibly instead what is needed is additional guidance to the translators.

Out of interest, what is the distinction between the original term and the proposed revision?
Comment 4 Jack 2016-04-16 21:16:42 UTC
> --- Comment #3 from allan <agander93@gmail.com> ---
> Out of interest, what is the distinction between the original term and the
> proposed revision?

There are two separate bugs in question here.  The first, about the 
German translation, had a specific suggestion - to use a word that is 
not specifically restricted in referring to stocks only.  Burkhard Lueck 
suggested to file a separate bug against the original English, so the 
translators would have a better context.

My position is that the English should not be changed, which leaves open 
the question of how to improve the context for the translators.

Your point about the extent of use of the term "share" suggests that it 
should be reviewed at a higher level, but for this specific pair of 
bugs, I think the only place to focus is in four of the specific types 
of investment transactions which mention "shares" specifically buy, 
sell, add, and remove.

My understanding is that the original term is equivalent to "share" only 
as it means the same as stock.  The suggested replacement seems to be a 
more generic term, similar to "security."   In English, I would argue 
that you buy shares of a security (stock, bond, or mutual fund) but not 
the security itself, although I admit it might be a difference only to 
English teachers.  I'm willing to leave it up to the German speakers 
whether the difference is important in that language.  In addition, if 
we can specify the context somehow, then it can be dealt with an any 
translation, in case it does make a difference.
Comment 5 allan 2016-04-16 22:40:36 UTC
Many/most/some users migrate from Quicken to KMM.  The English terms in question are exactly the same as those used in Quicken, and probably the MS equivalent too.

My advice is "Leave well alone."
Comment 6 mitchfrazier 2016-04-17 15:38:55 UTC
I would tend to prefer the "expected results" in the comments in the original bug report:

1) Buy securities
2) Sell securities
3) Dividend
4) Reinvest dividend
5) Yield
6) Add securities
7) Remove securities
8) Split shares
9) Interest income

Bonds are issued in some face value ($1000 or $10,000) and "you buy a bond" or "you buy 10 bonds".  You don't buy 10 shares of bonds, that in my opinion is bad "financial" English.  The term "shares" comes from the fact that when you buy a stock you have the right to "share" in the future profits of the company, when you buy a bond you get no such thing.   Also, note in the list above that it correctly did not modify "Split shares" to "Split securities" as "splitting" only applies to stocks.

That said, using "securities", although accurate (both stocks and bonds are securities), may not be optimal when you're entering a buy or sell transaction for a stock.  I think most people tend to have a better feel for stocks than bonds and I think the term "shares" comes to mind more quickly when thinking about stocks than does the term "securities."  And I can't think of a better term to refer to both.
Comment 7 Ralf Habacker 2018-10-30 23:17:10 UTC
This is what deepl (https://www.deepl.com) returns:

1) Buy securities     1) Wertpapiere kaufen
2) sell securities    2) Wertpapiere verkaufen
6) Add securities     6) Wertpapiere hinzufügen
7) Remove securities  7) Wertpapiere entfernen
8) split securities   8) Wertpapiere aufteilen

1) Buy shares         1) Aktien kaufen
2) Sell shares        2) Aktien verkaufen
6) Add shares         6) Aktien hinzufügen
7) Remove shares      7) Aktien entfernen
8) split shares       8) Aktien aufteilen
Comment 8 Jack 2018-10-30 23:58:44 UTC
Rereading this bug, I'm not sure if we ever filed a bug specifically for the German translation.  

I'm still against changing the English terms at this point.  If we ever create specific transaction types for bonds distinct from stock and mutual funds, then we would certainly want to use different words for bonds.  I also acknowledge that you buy a number of bonds rather than a number of shares of a bond, but I think the current usage is reasonably obvious (at least in English.)  I suppose using Wetpapiere in German might be more inclusive, but as I would not change the English, it might be considered in inaccurate translation.  (I do not speak German, so I say that only on the basis of Comment 7.)  Unfortunately, I do not think there is any easy way to provide a note to translators, although I suppose I might be able to discuss the terminology and address the issue in the handbook.  I'll add that to my list for completing the update of the handbook for 5.x.
Comment 9 Ralf Habacker 2018-11-08 18:28:50 UTC
In english there is always used '... share' (see  
https://cgit.kde.org/kmymoney.git/tree/kmymoney/widgets/transaction.cpp?h=4.8#n1454 and
 https://cgit.kde.org/kmymoney.git/tree/kmymoney/widgets/investtransaction.cpp?h=5.0#n140)

The German translation contains an unfortunate mix

grep -A2 'shares"' ~/src/l10n-kde4/de/messages/extragear-office/kmymoney.po
msgid "Total for all shares"
msgstr "Gesamtpreis aller Aktien"

--
msgid "Buy shares"
msgstr "Wertpapiere kaufen"

--
msgid "Sell shares"
msgstr "Aktien verkaufen"

--
msgid "Add shares"
msgstr "Wertpapiere hinzufügen"

--
msgid "Remove shares"
msgstr "Wertpapiere entfernen"

--
msgid "Split shares"
msgstr "Aktien stückeln"


As the translation indicates that here securities or shares are related there may be the chance to add a context with i18nc() (https://techbase.kde.org/Development/Tutorials/Localization/i18n#Adding_Context_with_i18nc.28.29)

In the case "Add shares" this may be 

i18nc("Add securities/shares", "Add shares")
Comment 10 Ralf Habacker 2018-11-08 18:30:19 UTC
(In reply to Ralf Habacker from comment #9)
> In the case "Add shares" this may be 
> 
> i18nc("Add securities/shares", "Add shares")

or 

i18nc("Add securities/shares/bonds", "Add shares")
Comment 11 Ralf Habacker 2018-11-08 20:13:20 UTC
Another option is to take the proposal from bug 361850#c5 which would be

msgid "Total for all shares"
msgstr "Gesamtpreis aller Anteile"

--
msgid "Buy shares"
msgstr "Anteile kaufen"

--
msgid "Sell shares"
msgstr "Anteile verkaufen"

--
msgid "Add shares"
msgstr "Anteile hinzufügen"

--
msgid "Remove shares"
msgstr "Anteile entfernen"

--
msgid "Split shares"
msgstr "Anteile stückeln"

The
Comment 12 Ralf Habacker 2019-01-29 12:45:45 UTC
For the related review see https://phabricator.kde.org/D18590
Comment 13 Jack 2019-01-29 16:39:31 UTC
I propose changing the title of this bug to refer specifically to the German translation, to be closed when the Phabricator review mentioned in Comment 12 is accepted.

Separately, open a separate wishlist to improve the wording in English.  That could actually be done in several steps: 1) adding to the manual that the use of "shares" does refer to any equity.  2) if possible/reasonable, add that explanation as a note to translators (I'm not sure where that should be put, and 3) a later revision, probably as part of an eventual major revision of how KMM handles investment.
Comment 14 Ralf Habacker 2019-09-29 10:37:27 UTC
Git commit 8dfbf51552638f6f1499e5548c34ed25cfd64c9a by Ralf Habacker.
Committed on 29/09/2019 at 10:39.
Pushed by habacker into branch '5.0'.

Add translation context to investment related actions
FIXED-IN:4.8.3,5.0.8

M  +5    -5    kmymoney/widgets/investtransaction.cpp

https://commits.kde.org/kmymoney/8dfbf51552638f6f1499e5548c34ed25cfd64c9a