Add translation context to investment related actions

BUG:361865
FIXED-IN:4.8.3,5.0.8